--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bulma": "^0.9.4",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
