--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bulma": "^0.9.4",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.5.5",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
